--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -269,6 +269,11 @@
     }
   }
 }
+.page-template-page-custom {
+  .site-footer {
+    margin-top: 0;
+  }
+}
 
 @media (max-width: 768px) {
   .site-footer {
